# mcp-play

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  init.sh  pyproject.toml
.claude/conventions/: doc.md
.context/: SESSION.md  freshness.md
.github/workflows/: ci.yml  cleanup.yml  docker.yml
.ops/: README.md
.ops/scripts/: ghcr-cleanup.sh
docs/: explanation.md  how-to.md  reference.md
docs/decisions/: adr-0001-adoption-convention-documentation.md  adr-0001-ci-cd-github-actions.md
tests/: test_main.py
